--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 :root{
     --lightblue: #579ad1;
+    --background: rgb(236, 236, 236);
     --grey: rgb(136, 136, 136);
     --blue: #66b0ce;
     --darkblue: #11406d;
@@ -9,8 +10,22 @@
     --error: rgb(255, 74, 74);
 }
 
+
 .error {
   color: var(--error);
+}
+
+.btn {
+  background-color: var(--error);
+
+
+}
+
+.dashboard-container{
+  background: var(--background);
+  min-height: 100vh;
+  min-width: 100vw;
+  font-family: "Poppins", sans-serif;
 }
 
 .text-center{
@@ -127,6 +142,7 @@ select:hover, option:hover {
 }
 
 .grid-container{
+  background: white;
   border-radius: 0.7rem;
   margin-top: 2rem;
   padding: 0.2rem;
@@ -142,6 +158,15 @@ select:hover, option:hover {
   border: solid rgb(175, 173, 173) 0.3px;
   border-radius: 10px;
 }
+
+.Orderdetail{
+  width: 40%;
+  margin-left: 4%;
+  height: 60%;
+  margin-top:05%;
+}
+
+
 
 @media (max-width: 900px) {
   html {
